--- a/public/css/desktopStyle.css
+++ b/public/css/desktopStyle.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-	background-color: #fecc5c;
+	background-color: #FFE6E6;
 }
 
 .allContent {
@@ -15,28 +15,25 @@ body {
 .mainHeader {
 	display: flex;
 	margin-top: 1.5em;
-	margin-bottom: 1em;
-	/*border: 1px solid #fd8d3c;*/
-	box-shadow: 2px 2px 5px #888888;
+	margin-bottom: 0.25em;
+	border: 2px solid red;
+	border-radius: 2.5em;
 	background: url(../images/Bookshelf.png);
-	background-size: 50% 100%;
+	background-size: 12.5% 100%;
 	background-repeat: repeat;
+	min-height: 4em;
 }
 
 .headerLeft {
-	/*background-color: #ffffb2;*/
-	width: 50%;
-	text-align: right;
+	margin: 0 auto;
+	text-align: center;
 	font-size: 3em;
 	font-family: "Impact";
-	color: #fd8d3c;
-}
-
-.headerRight {
-	/*background-color: #ffffb2;*/
-	width: 50%;
-	display: flex;
-	justify-content: flex-end;
+	background-color: #000099;
+	color: white;
+	border: 2px solid red;
+	border-radius: 0.25em;
+	box-shadow: 2px 2px 5px #888888;
 }
 
 #headerRightText {
@@ -61,12 +58,22 @@ body {
 
 .homeContent {
 	width: 100%;
-	min-height: 20em;
-	background-color: #ffffb2;
-	/*border: 1px solid #fd8d3c;*/
+	min-height: 8em;
+	background-color: #003300;
+	box-shadow: 2px 2px 5px #888888;
+	border: 2px solid red;
+	border-radius: 1em;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	/*align-items: center;*/
+	padding: 2em;
+	margin: 3em 0;
+}
+
+.formText {
+	color: #FFFFCC;
+	font-size: 1.25em;
+	margin: 0 0.5em;
 }
 
 .hoverClick {
@@ -80,15 +87,21 @@ body {
 }
 
 /* For the results table */
+
+#myNavbar {
+	margin: 3em 0;
+}
+
 .customTable {
 	width: 100%;
-	margin-top: 1.5em;
-	background-color: #ffffb2;
-	border: 1px solid #fd8d3c;
+	margin: 1.5em 0 3em 0;
+	background-color: #003300;
+	border: 2px solid red;
 }
 
 .customRow {
-	border: 1px solid #fd8d3c;
+	border: 2px solid red;
+	color: #FFFFCC;
 	cursor: pointer;
 	padding: 0.5em;
 }
@@ -103,14 +116,6 @@ body {
 	padding: 0.5em;
 }
 
-.resultsFilter {
-	/*border: 1px solid #fd8d3c;*/
-}
-
-.navbar-default {
-	border-color: #fd8d3c;
-}
-
 .buttonFormatting:hover {
 	color: #e31a1c;
 }
@@ -120,9 +125,11 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
-	/*border: 1px solid #fd8d3c;*/
-	background-color: #ffffb2;
+	border: 2px solid red;
+	border-radius: 0.5em;
+	background-color: #003300;
 	box-shadow: 2px 2px 5px #888888;
+	margin: 3em 0;
 }
 
 .detailImage {
@@ -139,6 +146,8 @@ body {
 
 .inputSpacing {
 	margin-left: 1.25em;
+	color: #FFFFCC;
+
 }
 
 .detailHeading {
