--- a/public/css/mediumDeviceStyle.css
+++ b/public/css/mediumDeviceStyle.css
@@ -13,18 +13,16 @@ html, body {
 	margin-top: 1.5em;
 	margin-bottom: 1em;
 	border: 1px dashed black;
+	background-size: 25% 100%;
 }
 
 .headerLeft {
-	background-color: #858585;
-	width: 50%;
-	text-align: right;
+	margin: 0 auto;
 	font-size: 3em;
 	font-family: "Impact";
 }
 
 .headerRight {
-	background-color: #858585;
 	width: 50%;
 	display: flex;
 	justify-content: flex-end;
