--- a/public/css/desktopStyle.css
+++ b/public/css/desktopStyle.css
@@ -125,7 +125,7 @@ body {
 /*Styles for the detail view*/
 .detailSummary {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: no-wrap;
 	justify-content: flex-start;
 	border: 2px solid red;
 	border-radius: 0.5em;
@@ -138,12 +138,14 @@ body {
 	max-width: 20em;
 	max-height: 30em;
 	padding: 0.5em;
-	float: left;
+	flex-shrink: 0;
+	/*float: left;*/
 }
 
 .detailInfo {
 	margin-left: 0.5em;
 	padding: 0.5em;
+	flex-shrink: 2;
 }
 
 .inputSpacing {
@@ -158,4 +160,5 @@ body {
 
 .detailHeading {
 	color: #fd8d3c;
+	min-width: 50px;
 }
